[metadata]
name = das-phsafe-cef-reader
version = attr: phsafe_safetab_reader.__version__
author = USCB
license_files = 
    LICENSE
license = CCO 1.0
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
zip_safe = true
include_package_data = true
packages = find:
package_dir =
    =src
python_requires >= 3.7
setup_requires =
    setuptools >= 46.4.0
install_requires =
    numpy
    das_ctools

[options.packages.find]
where=src
# [bdist_wheel]
# universal = true

# [sdist]
# formats = zip, gztar

