[metadata]
name = das-ctools
version = attr: ctools.__version__
author = USCB
license_files =
    LICENSE
license = CCO 1.0
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
zip_safe = false
include_package_data = true
#packages = find:
package_dir =
    =src
packages =
    ctools
    ctools/schema
python_requires = >= 3.6
setup_requires =
    setuptools >= 46.4.0
install_requires =
    importlib-resources<6.0.0
    requests
    IPython
    botocore
    boto3
    pandas
    numpy
    matplotlib
    pyyaml
    das-dashboard-client

# [bdist_wheel]
# universal = true

# [sdist]
# formats = zip, gztar

[options.entry_points]
console_scripts =
    das_tee = ctools.tee:main
    emr_control = ctools.emr_control:main
    data_cat = ctools.data_cat:main
    aws_errors = ctools.aws_errors:main
    ctools_colors = ctools.colors:main